chore(App): fix overflow issues and minor readme update

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,6 @@ body {
     width: 100%;
     background-color: rgb(33, 33, 33) !important;
     height: 100vh;
-    overflow: hidden;
 }
 
 .IntroBox {
